--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -18,3 +18,22 @@
 - Rules / VISION section to push in C_View
 - Auto-snap doesn't need to fit a manager, it can register itself at Start
 - Coordinates of the covers / logic of tiles hold covers
+
+
+## FEATURES
+
+- Add events for everything
+- Multiple victory conditions
+- Obstacle transparency
+- Destructible obstacles
+- Cover system
+- Better enemy behaviors
+- Actions systems : possibility between multiple designs
+- Large elements (multiple tiles)
+- When hover an enemy, attacker aim immediately
+- Missing shots can touch another tile
+- Hide life bar by default, only if the character is hurt or on hover
+- Online API like Unity (ask Simon)
+- Border cover can block the line of sight
+- Overwatch action
+- In Tactical Course project, export all the comments //BUTT to this project
