--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -7,24 +7,26 @@
 ## REFACTOR
 
 - Rules / VISION section to push in C_View
-- Auto-snap doesn't need to fit a manager, it can register itself at Start
 - Coordinates of the covers / logic of tiles hold covers
-- Separate fog of war in a single manager
+- Fog of war in a single manager
+- Separate the logic between Turns and M_Characters
 
 ## FEATURES
 
+- Namespaces
 - Cover system
+- Actions systems : possibility between multiple designs
+- Online API like Unity (ask Simon)
+
 - Add events for everything
 - Multiple victory conditions
 - Obstacle transparency
 - Destructible obstacles
 - Better enemy behaviors
-- Actions systems : possibility between multiple designs
 - Large elements (multiple tiles)
 - When hover an enemy, attacker aim immediately
 - Missing shots can touch another tile
 - Hide life bar by default, only if the character is hurt or on hover
-- Online API like Unity (ask Simon)
 - Border cover can block the line of sight
 - Overwatch action
 - In Tactical Course project, export all the comments //BUTT to this project
