Cover feedbacks WIP: create a cover feedback

--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -10,6 +10,7 @@
 - Coordinates of the covers / logic of tiles hold covers
 - Fog of war in a single manager
 - Separate the logic between Turns and M_Characters
+- Separate Inputs and Logic
 
 ## FEATURES
 
