Create a Coordinate to replace Vector2<Int> as coordinates (can be nullable)

--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -19,7 +19,7 @@
 - Separate the logic between Turns and M_Characters
 - Separate Inputs and Logic
 - Ergonomic of characters
-- Create a coordinates struct for the tiles (easiest to transfer)
+- Coordinates for characters (not in Move)
 
 ## FEATURES
 
