--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -51,4 +51,5 @@
 - Enemy spawners
 - Movements with special costs or obligation to stop
 - 3D grid
-- Line of sight on enemies visibles
+- Feedback of line of sight on visible enemies
+- Tiles of different types
