--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -33,6 +33,7 @@
 - UI with recommendations
 - Tiles material work with an enum, use a Scriptable object instead
 - Turns -> Victory to events
+- Animator of the characters
 
 ## FEATURES
 
