--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -17,6 +17,9 @@
 # Turns
 - if you play the last character of the team order and finishes its action, it passes to the next team, even if another character can play
 
+# Lifebar
+- restart the scene Example scene 3 teams -> when blue starts, it's an error on the life bar
+
 ## REFACTOR
 
 - Separate folders between Toy box and Technical box
@@ -25,7 +28,6 @@
 - Fog of war in a single manager
 - Separate the logic between Turns and M_Characters
 - Ergonomic of characters
-                                    - Coordinates for characters (not in Move)
 - Tile class does a lot of things, fraction it (in Coordinates and a new class like Tile renderer)
 - Optimization: create a variable "actionHasBeenDone" to calculate only once by turn actions with a big cost (line of sight, walkable range, etc.)
 - C__Look -> fusion GetCoordinatesOfLineOfSightOn() and GetCoordinatesOfFullLineOfSightOn() together with LoS.TileInclusion
@@ -34,6 +36,7 @@
 - Turns -> Victory to events
 - Animator of the characters
 - Rename Character in Unit
+- Use the as possible Coordinates and not Tiles (ex: in LineOfSight)
 
 ## FEATURES
 
