Some characters can't heal

--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -51,6 +51,7 @@
 - Range of weapons (melee weapons)
 - Character can throw spells (like fireball)
 - Display weapons / characters infos on UI
+- Visual line of sight on hover an enemy
 
 - Separate folders between Toy box and Technical box
 - Namespaces
