Import anim for spellcasting

--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -21,7 +21,6 @@
 - restart the scene Example scene 3 teams -> when blue starts, it's an error on the life bar
 
 ## CONTENT
-- Classes of characters
 - Free hands melee actions
 
 ## REFACTOR
@@ -68,6 +67,7 @@
 - Overwatch action
 - In Tactical Course project, export all the comments //BUTT to this project
 - Camera rotation
+- Camera actions
 - Enemy spawners
 - Movements with special costs or obligation to stop
 - 3D grid
