--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -22,6 +22,8 @@
 
 ## CONTENT
 - Free hands melee actions
+- Magical spells
+- Drone
 
 ## REFACTOR
 
@@ -74,3 +76,5 @@
 - Feedback of line of sight on visible enemies
 - Tiles of different types
 - Can shoot from a step (lean)
+- Armor and shield
+- Notes on elements
