--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -42,7 +42,6 @@
 - Can add and remove Actions without bugs
 - Maybe use raycasts for Autosnap
 - Replace Texts by TMP
-- Pass Current weapon from Attack to WeaponHolder
 
 ## OPTIMISATION
 - Create a variable "actionHasBeenDone" to calculate only once by turn actions with a big cost (line of sight, walkable range, etc.)
@@ -79,3 +78,4 @@
 - Can shoot from a step (lean)
 - Armor and shield
 - Notes on elements
+- Ragdoll on death
