Action effect feedback is independant of M_Feeedback

--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -41,6 +41,9 @@
 - UI
     - button next turn
     - replay button (victory screen)
+- Unit UI
+    - Health bar
+    - Cover feedbacks
 
 - Coordinates of the covers / logic of tiles hold covers -> create a new grid for elements on edges / vertex
 - Fog of war in a single manager, can be enabled and disabled
