--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -32,13 +32,12 @@
 
 - Feedbacks need to be independent of the manager
     - Cover state
+    - Character's cover state
     - Cursor
     - Movement area
     - Attackable tiles
     - View lines (what is it ? fog?)
     - Fog of war
-- UI
-    - button next turn
 - Unit UI
     - Health bar
     - Cover feedbacks
