CoversHolder is independant from M_Feedbacks

--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -31,10 +31,9 @@
 - Cursors in Actions (not in Feedbacks)
 
 - Feedbacks need to be independent of the manager
-    - Cover state
     - Character's cover state
-    - View lines (what is it ? fog?)
     - Fog of war
+        - View lines -> visible lines of the fog of war
 - Unit UI
     - Health bar
     - Cover feedbacks
