Unit UI is independent from M_Feedbacks

--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -31,10 +31,9 @@
 - Cursors in Actions (not in Feedbacks)
 
 - Feedbacks need to be independent of the manager
-    - Character's cover state
     - Fog of war
         - View lines -> visible lines of the fog of war
-- Unit UI
+- Unit UI need to have independent parts
     - Health bar
     - Cover feedbacks
 
