--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -35,6 +35,8 @@
 - M_Rules
     - Malus of precision by distance -> move it in character or weapon
     - Fog of war vision rules not in M_Rules
+    - Characters turn order in M_Characters
+    - Remove M_Rules
 
 - Rename F_... and UI_... modules in Module_... (code and prefab)
 - Tiles material work with an enum, use a Scriptable object instead
@@ -44,6 +46,7 @@
 - Rename Character in Unit
 - Can add and remove Actions without bugs
 - Maybe use raycasts for Autosnap
+
 
 ## OPTIMISATION
 ## ============
