--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -4,6 +4,7 @@
 # Character movement
 - Pathfinding is strange
     - Feedback line doesn't fit with the pathfinding (fit with the distance the character can walk)
+    - Moving zone not updated with new pathfinding rules (can pass by diagonals with a cover)
 - If character pass through another, the last one losing its tile: because tiles have only one element on it
 
 # Edge covers
@@ -46,7 +47,8 @@
 - Rename Character in Unit
 - Can add and remove Actions without bugs
 - Maybe use raycasts for Autosnap
-
+- Try to kill a character during its own turn
+    - OnDeath, need to end its turn
 
 ## OPTIMISATION
 ## ============
