Malus by distance not in M_Rules anymore (in Weapons directly)

--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -34,8 +34,8 @@
 ## ========
 
 - M_Rules
-    - Malus of precision by distance -> move it in character or weapon
-    - Fog of war vision rules not in M_Rules
+    - Fog of war vision rules not in M_Rules -> fog of war as a Manager ?
+        - Fog of war view lines as Module
     - Characters turn order in M_Characters
     - Remove M_Rules
 
