Shootable enemy in fog of war bug solved + some refacto

--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -10,9 +10,6 @@
 # Edge covers
 - Edge covers change position sometimes (repro needed)
 
-# Fog of war
-- Tiles in fog of war where character can move and where an enemy is are displayed in red
-
 # Camera
 - recenter camera doesn't work (function is called but does nothing)
 
@@ -83,6 +80,7 @@
 - Camera rotation
 - Camera actions
 - Enemy spawners
+- Vault over little covers
 - Movements with special costs or obligation to stop
 - 3D grid
 - Tiles of different types
