Bug solved: lifebar don't initialize if enemy beggins

--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -15,9 +15,7 @@
 
 # Turns
 - if you play the last character of the team order and finishes its action, it passes to the next team, even if another character can play
-
-# Lifebar
-- restart the scene Example scene 3 teams -> when blue starts, it's an error on the life bar
+- if there are 3 teams, bug blocker when all members of team are dead
 
 # Restart scene
 - bug on F_Covers, easy repro
