--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -14,8 +14,8 @@
     - recenter camera doesn't work (function is called but does nothing)
     
 # Turns
-    - if you play the last character of the team order and finishes its action, it passes to the next team, even if another character can play
     - if there are 3 teams, bug blocker when all members of team are dead
+    - if a character can't play, it can attack (maybe move / it has feedbacks)
     
 # Restart scene
     - bug on F_Covers, easy repro
@@ -28,6 +28,9 @@
             - Fog of war view lines as Module
         - Characters turn order in M_Characters
         - Remove M_Rules
+    
+    - Actions
+        - Replace EndTurn by EndAction (if an unit can do multiple actions)
     
     - Rename F_... and UI_... modules in Module_... (code and prefab)
     - Tiles material work with an enum, use a Scriptable object instead
